# outbreak_parser_tools

./: README.md  logger.py  setup.cfg
src/outbreak_parser_tools/: addendum.py  logger.py  safe_request.py  upload_config.py
tests/: tests.py
tests/parser_files/: dump.py  meta.py  parser.py  upload.py
