[metadata]
name = outbreak_parser_tools
version = 1.0
author = Julia L Mullen
author_email = jmullen@scripps.edu
description = Simple tools to add new plugin information to outbreak
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/outbreak-info/outbreak_parser_tools
project_urls =
    Website = https://outbreak.info
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
